# deltaflock

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
docs/: database-initialization.md
examples/: custom-duckdb-init.sql
scripts/: README.md  render_ascii.py  scan_secrets.sh
src/app/: __init__.py  main.py
src/app/api/v1/: routes.py
src/app/config/: settings.py
src/app/db/: __init__.py  duckdb_session.py
src/app/middleware/: session_middleware.py
src/app/services/: query_cache_service.py  query_service.py
src/app/static/: ascii_art.html
src/app/telemetry/: tracing.py
tests/: test_api.py
